# teste-poetry-environment

./: README.md  pyproject.toml
tests/: test_project.py
