[tool.poetry]
name = "meu-poetry-demo"
version = "0.1.0"
description = ""
authors = ["RudhyDev <rudhy.pereira@gmail.com>"]
readme = "README.md"
packages = [{include = "meu_poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
